fix some tpyo and change something's name

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -40,7 +40,7 @@ item.quartzWafer.name=Quartz Wafer
 item.microHeater.name=Micro-Heater
 item.quartzCrystalResonator.name=Quartz Crystal Resonator
 item.inverter.name=Inverter
-item.neutronSource.name=Neutron Source Case
+item.neutronSource.name=Neutron Source
 item.naquadahMass.name=Naquadah Mass
 item.enrichedNaquadahMass.name=Enriched Naquadah Mass
 item.naquadriaMass.name=Naquadria Mass
