--- a/src/resources/assets/miscutils/lang/zh_CN.lang
+++ b/src/resources/assets/miscutils/lang/zh_CN.lang
@@ -2187,24 +2187,24 @@ item.itemDustDemicheleiteBr.name=重闪石(Br)粉
 
 //Materials
 
-item.itemIngotTitansteel.name=钛钢
-item.itemHotIngotTitansteel.name=热钛钢
-item.itemDustTitansteel.name=钛钢粉
-item.itemDustTinyTitansteel.name=小撮钛钢粉
-item.itemDustSmallTitansteel.name=小堆钛钢粉
-item.itemNuggetTitansteel.name=钛钢粒
-item.itemPlateTitansteel.name=钛钢板
-item.itemPlateDoubleTitansteel.name=双重钛钢板
-item.itemBoltTitansteel.name=钛钢螺栓
-item.itemRodTitansteel.name=钛钢杆
-item.itemRodLongTitansteel.name=长钛钢杆
-item.itemRingTitansteel.name=钛钢环
-item.itemScrewTitansteel.name=钛钢螺丝
-item.itemRotorTitansteel.name=钛钢转子
-item.itemGearTitansteel.name=钛钢齿轮
-item.itemCellTitansteel.name=钛钢单元
-tile.Block of Titansteel.name=钛钢块
-tile.Titansteel Frame Box.name=钛钢框架
+item.itemIngotTitansteel.name=泰坦精钢
+item.itemHotIngotTitansteel.name=热泰坦精钢
+item.itemDustTitansteel.name=泰坦精钢粉
+item.itemDustTinyTitansteel.name=小撮泰坦精钢粉
+item.itemDustSmallTitansteel.name=小堆泰坦精钢粉
+item.itemNuggetTitansteel.name=泰坦精钢粒
+item.itemPlateTitansteel.name=泰坦精钢板
+item.itemPlateDoubleTitansteel.name=双重泰坦精钢板
+item.itemBoltTitansteel.name=泰坦精钢螺栓
+item.itemRodTitansteel.name=泰坦精钢杆
+item.itemRodLongTitansteel.name=长泰坦精钢杆
+item.itemRingTitansteel.name=泰坦精钢环
+item.itemScrewTitansteel.name=泰坦精钢螺丝
+item.itemRotorTitansteel.name=泰坦精钢转子
+item.itemGearTitansteel.name=泰坦精钢齿轮
+item.itemCellTitansteel.name=泰坦精钢单元
+tile.Block of Titansteel.name=泰坦精钢块
+tile.Titansteel Frame Box.name=泰坦精钢框架
 
 item.itemIngotOctiron.name=八角铁锭
 item.itemHotIngotOctiron.name=热八角铁锭
@@ -2396,24 +2396,24 @@ item.itemCellAdvancedNitinol.name=高级镍钛诺单元
 tile.Block of Advanced Nitinol.name=高级镍钛诺块
 tile.Advanced Nitinol Frame Box.name=高级镍钛诺框架
 
-item.itemIngotArcanite.name=单钾芒硝锭
-item.itemHotIngotArcanite.name=热单钾芒硝锭
-item.itemDustArcanite.name=单钾芒硝粉
-item.itemDustTinyArcanite.name=小撮单钾芒硝粉
-item.itemDustSmallArcanite.name=小堆单钾芒硝粉
-item.itemNuggetArcanite.name=单钾芒硝粒
-item.itemPlateArcanite.name=单钾芒硝板
-item.itemPlateDoubleArcanite.name=双重单钾芒硝板
-item.itemBoltArcanite.name=单钾芒硝螺栓
-item.itemRodArcanite.name=单钾芒硝杆
-item.itemRodLongArcanite.name=长单钾芒硝杆
-item.itemRingArcanite.name=单钾芒硝环
-item.itemScrewArcanite.name=单钾芒硝螺丝
-item.itemRotorArcanite.name=单钾芒硝转子
-item.itemGearArcanite.name=单钾芒硝齿轮
-item.itemCellArcanite.name=单钾芒硝单元
-tile.Block of Arcanite.name=单钾芒硝块
-tile.Arcanite Frame Box.name=单钾芒硝框架
+item.itemIngotArcanite.name=奥金锭
+item.itemHotIngotArcanite.name=热奥金锭
+item.itemDustArcanite.name=奥金粉
+item.itemDustTinyArcanite.name=小撮奥金粉
+item.itemDustSmallArcanite.name=小堆奥金粉
+item.itemNuggetArcanite.name=奥金粒
+item.itemPlateArcanite.name=奥金板
+item.itemPlateDoubleArcanite.name=双重奥金板
+item.itemBoltArcanite.name=奥金螺栓
+item.itemRodArcanite.name=奥金杆
+item.itemRodLongArcanite.name=长奥金杆
+item.itemRingArcanite.name=奥金环
+item.itemScrewArcanite.name=奥金螺丝
+item.itemRotorArcanite.name=奥金转子
+item.itemGearArcanite.name=奥金齿轮
+item.itemCellArcanite.name=奥金单元
+tile.Block of Arcanite.name=奥金块
+tile.Arcanite Frame Box.name=奥金框架
 
 item.itemIngotPikyonium64B.name=皮卡优合金64B锭
 item.itemHotIngotPikyonium64B.name=热皮卡优合金64B锭
