--- a/src/resources/assets/miscutils/lang/zh_CN.lang
+++ b/src/resources/assets/miscutils/lang/zh_CN.lang
@@ -3237,4 +3237,7 @@ item.itemBasicTurbine_0.name=基础铁涡轮
 item.itemBasicTurbine_1.name=基础青铜涡轮
 
 interaction.voidexcess.enabled=启用过量销毁
-interaction.voidexcess.disabled=禁用禁用销毁
+interaction.voidexcess.disabled=禁用过量销毁
+
+interaction.separateBusses.enabled=独立输入总线
+interaction.separateBusses.disabled=联合输入总线
