--- a/src/main/resources/assets/detravscannermod/lang/zh_CN.lang
+++ b/src/main/resources/assets/detravscannermod/lang/zh_CN.lang
@@ -39,6 +39,6 @@ tooltip.detrav.scanner.distance.1=中等距离(3-5), 长距离(6-8), 很远(9+)
 gui.detrav.scanner.pollution=污染
 gui.detrav.scanner.unknown_fluid=未知流体!
 
-gui.detrav.scanner.tooltip.fluid_name=Fluid Name: 
-gui.detrav.scanner.tooltip.fluid_amount=Fluid Amount: 
-gui.detrav.scanner.tooltip.no_fluid=Empty
+gui.detrav.scanner.tooltip.fluid_name=流体名：
+gui.detrav.scanner.tooltip.fluid_amount=流体储量：
+gui.detrav.scanner.tooltip.no_fluid=空
