--- a/src/main/resources/assets/tectech/lang/zh_CN.lang
+++ b/src/main/resources/assets/tectech/lang/zh_CN.lang
@@ -50,8 +50,8 @@ item.em.EuMeterGT.desc.1=只需右键方块.
 
 item.em.frontRotate.name=正面旋转扳手
 item.em.frontRotate.desc.0=触发正面旋转界面
-item.em.frontRotate.desc.1=仅旋转前面板,
-item.em.frontRotate.desc.2=允许结构旋转.
+item.em.frontRotate.desc.1=可以旋转多方块控制器,
+item.em.frontRotate.desc.2=从而使整个结构可以旋转.
 
 item.em.parametrizerMemoryCard.name=数据化储存卡
 item.em.parametrizerMemoryCard.desc.0=存储参数
@@ -313,9 +313,9 @@ gt.blockmachines.hatch.dynamomulti64.tier.11.name=64安UIV动力仓
 gt.blockmachines.hatch.dynamomulti04.tier.12.name=4安UMV动力仓
 gt.blockmachines.hatch.dynamomulti16.tier.12.name=16安UMV动力仓
 gt.blockmachines.hatch.dynamomulti64.tier.12.name=64安UMV动力仓
-gt.blockmachines.hatch.dynamomulti04.tier.13.name=4安IV动力仓
-gt.blockmachines.hatch.dynamomulti16.tier.13.name=16安IV动力仓
-gt.blockmachines.hatch.dynamomulti64.tier.13.name=64安IV动力仓
+gt.blockmachines.hatch.dynamomulti04.tier.13.name=4安UXV动力仓
+gt.blockmachines.hatch.dynamomulti16.tier.13.name=16安UXV动力仓
+gt.blockmachines.hatch.dynamomulti64.tier.13.name=64安UXV动力仓
 gt.blockmachines.hatch.dynamomulti.desc.0=从多方块机器以高电流输出能源
 gt.blockmachines.hatch.dynamomulti.desc.1=输出电流
 
@@ -875,4 +875,3 @@ tt.keyphrase.Side_capabilities=辅助功能
 #OpenTurrets compatibility
 tile.turretHeadEM.name=元物质炮塔
 tile.turretBaseEM.name=元物质炮塔基座
-© 2021 GitHub, Inc.
