Add workaround for BW Hydrogen Peroxide unification. Made generic GT++ Recipes maps use default GT NEI handler. Boosted fuel value of Rocket Fuels.

--- a/src/resources/assets/miscutils/lang/en_US.lang
+++ b/src/resources/assets/miscutils/lang/en_US.lang
@@ -3256,3 +3256,4 @@ item.BasicNuclearChemItem.7.name=Red Cellulose Fiber
 item.itemCellLiFBeF2ZrF4U235.name=LFTR Fuel I Cell
 item.itemCellLiFBeF2ZrF4UF4.name=LFTR Fuel II Cell
 item.itemCellLiFBeF2ThF4UF4.name=LFTR Fuel III Cell
+item.Li2BeF2UF4.name=Burnt Li2BeF2UF4 Cell
