--- a/src/resources/assets/miscutils/lang/en_US.lang
+++ b/src/resources/assets/miscutils/lang/en_US.lang
@@ -3259,7 +3259,7 @@ item.itemCellLiFBeF2ThF4UF4.name=LFTR Fuel III Cell
 item.Li2BeF2UF4.name=Burnt Li2BeF2UF4 Cell
 
 //Added 6/12/21
-item.itemCellLiBeF2UF4FP.name=LiBeF2UF4FP Cell
+item.itemCellLiFBeF2UF4FP.name=LiFBeF2UF4FP Cell
 item.itemCellUF6F2.name=UF6F2 Cell
 item.itemCellLiFBeF2ThF4.name=LiFBeF2ThF4 Cell
 item.itemCellUF6F2FP.name=UF6F2FP Cell
