--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -974,6 +974,7 @@ for.bees.species.steel=Steel
 for.bees.species.nickel=Nickel
 for.bees.species.zinc=Zinc
 for.bees.species.silver=Silver
+for.bees.species.cryolite=Cryolite
 for.bees.species.gold=Gold
 for.bees.species.sulfur=Sulfur
 for.bees.species.gallium=Gallium
