Added HS-188A. Fixed NEI handling for some handlers. Fixed some tooltips.

--- a/src/resources/assets/miscutils/lang/en_US.lang
+++ b/src/resources/assets/miscutils/lang/en_US.lang
@@ -3296,4 +3296,19 @@ item.ImpureLiFBeF2.name=Impure LiFBeF2 Cell
 item.itemCellHeliumSpargedLiFBeF2UF4FP.name=Helium Sparged LiFBeF2UF4FP Cell
 item.itemCellFluorineSpargedLiFThF4.name=Fluorine Sparged LiFThF4 Cell
 item.itemCellFluorineSpargedLiFBeF2ThF4.name=Fluorine Sparged LiFBeF2ThF4 Cell
+item.itemIngotHS188A.name=HS-188A Ingot
+item.itemHotIngotHS188A.name=Hot HS-188A Ingot
+item.itemDustHS188A.name=HS-188A Dust
+item.itemDustTinyHS188A.name=Tiny Pile of HS-188A Dust
+item.itemDustSmallHS188A.name=Small Pile of HS-188A Dust
+item.itemNuggetHS188A.name=HS-188A Nugget
+item.itemPlateHS188A.name=HS-188A Plate
+item.itemPlateDoubleHS188A.name=Double HS-188A Plate
+item.itemBoltHS188A.name=HS-188A Bolt
+item.itemRodHS188A.name=HS-188A Rod
+item.itemRodLongHS188A.name=Long HS-188A Rod
+item.itemRingHS188A.name=HS-188A Ring
+item.itemScrewHS188A.name=HS-188A Screw
+item.itemRotorHS188A.name=HS-188A Rotor
+item.itemGearHS188A.name=HS-188A Gear
 
