Add recipes for Sparging Multiblock. Add some localization. Migrate material recipes out of item classes.

--- a/src/resources/assets/miscutils/lang/en_US.lang
+++ b/src/resources/assets/miscutils/lang/en_US.lang
@@ -3312,3 +3312,34 @@ item.itemScrewHS188A.name=HS-188A Screw
 item.itemRotorHS188A.name=HS-188A Rotor
 item.itemGearHS188A.name=HS-188A Gear
 
+//Added 12/12/21
+item.itemIngotErbium.name=Erbium Ingot
+item.itemHotIngotErbium.name=Hot Erbium Ingot
+item.itemDustErbium.name=Erbium Dust
+item.itemDustTinyErbium.name=Tiny Pile of Erbium Dust
+item.itemDustSmallErbium.name=Small Pile of Erbium Dust
+item.itemNuggetErbium.name=Erbium Nugget
+item.itemPlateErbium.name=Erbium Plate
+item.itemPlateDoubleErbium.name=Double Erbium Plate
+item.itemBoltErbium.name=Erbium Bolt
+item.itemRodErbium.name=Erbium Rod
+item.itemRodLongErbium.name=Long Erbium Rod
+item.itemRingErbium.name=Erbium Ring
+item.itemScrewErbium.name=Erbium Screw
+item.itemRotorErbium.name=Erbium Rotor
+item.itemGearErbium.name=Erbium Gear
+item.itemIngotHeLiCoPtEr.name=HeLiCoPtEr Ingot
+item.itemHotIngotHeLiCoPtEr.name=Hot HeLiCoPtEr Ingot
+item.itemDustHeLiCoPtEr.name=HeLiCoPtEr Dust
+item.itemDustTinyHeLiCoPtEr.name=Tiny Pile of HeLiCoPtEr Dust
+item.itemDustSmallHeLiCoPtEr.name=Small Pile of HeLiCoPtEr Dust
+item.itemNuggetHeLiCoPtEr.name=HeLiCoPtEr Nugget
+item.itemPlateHeLiCoPtEr.name=HeLiCoPtEr Plate
+item.itemPlateDoubleHeLiCoPtEr.name=Double HeLiCoPtEr Plate
+item.itemBoltHeLiCoPtEr.name=HeLiCoPtEr Bolt
+item.itemRodHeLiCoPtEr.name=HeLiCoPtEr Rod
+item.itemRodLongHeLiCoPtEr.name=Long HeLiCoPtEr Rod
+item.itemRingHeLiCoPtEr.name=HeLiCoPtEr Ring
+item.itemScrewHeLiCoPtEr.name=HeLiCoPtEr Screw
+item.itemRotorHeLiCoPtEr.name=HeLiCoPtEr Rotor
+item.itemGearHeLiCoPtEr.name=HeLiCoPtEr Gear
