Add one final milling recipe for Monazite.

--- a/src/resources/assets/miscutils/lang/en_US.lang
+++ b/src/resources/assets/miscutils/lang/en_US.lang
@@ -3343,3 +3343,19 @@ item.itemRingHeLiCoPtEr.name=HeLiCoPtEr Ring
 item.itemScrewHeLiCoPtEr.name=HeLiCoPtEr Screw
 item.itemRotorHeLiCoPtEr.name=HeLiCoPtEr Rotor
 item.itemGearHeLiCoPtEr.name=HeLiCoPtEr Gear
+item.milledMonazite.name=Milled Monazite
+item.itemIngotPraseodymium.name=Praseodymium Ingot
+item.itemHotIngotPraseodymium.name=Hot Praseodymium Ingot
+item.itemDustPraseodymium.name=Praseodymium Dust
+item.itemDustTinyPraseodymium.name=Tiny Pile of Praseodymium Dust
+item.itemDustSmallPraseodymium.name=Small Pile of Praseodymium Dust
+item.itemNuggetPraseodymium.name=Praseodymium Nugget
+item.itemPlatePraseodymium.name=Praseodymium Plate
+item.itemPlateDoublePraseodymium.name=Double Praseodymium Plate
+item.itemBoltPraseodymium.name=Praseodymium Bolt
+item.itemRodPraseodymium.name=Praseodymium Rod
+item.itemRodLongPraseodymium.name=Long Praseodymium Rod
+item.itemRingPraseodymium.name=Praseodymium Ring
+item.itemScrewPraseodymium.name=Praseodymium Screw
+item.itemRotorPraseodymium.name=Praseodymium Rotor
+item.itemGearPraseodymium.name=Praseodymium Gear
