--- a/src/resources/assets/miscutils/lang/en_US.lang
+++ b/src/resources/assets/miscutils/lang/en_US.lang
@@ -3311,6 +3311,7 @@ item.itemRingHS188A.name=HS-188A Ring
 item.itemScrewHS188A.name=HS-188A Screw
 item.itemRotorHS188A.name=HS-188A Rotor
 item.itemGearHS188A.name=HS-188A Gear
+item.itemCellHS188A.name=HS-188A Cell
 
 //Added 12/12/21
 item.itemIngotErbium.name=Erbium Ingot
@@ -3328,6 +3329,7 @@ item.itemRingErbium.name=Erbium Ring
 item.itemScrewErbium.name=Erbium Screw
 item.itemRotorErbium.name=Erbium Rotor
 item.itemGearErbium.name=Erbium Gear
+item.itemCellErbium.name=Erbium Cell
 item.itemIngotHeLiCoPtEr.name=HeLiCoPtEr Ingot
 item.itemHotIngotHeLiCoPtEr.name=Hot HeLiCoPtEr Ingot
 item.itemDustHeLiCoPtEr.name=HeLiCoPtEr Dust
@@ -3343,7 +3345,7 @@ item.itemRingHeLiCoPtEr.name=HeLiCoPtEr Ring
 item.itemScrewHeLiCoPtEr.name=HeLiCoPtEr Screw
 item.itemRotorHeLiCoPtEr.name=HeLiCoPtEr Rotor
 item.itemGearHeLiCoPtEr.name=HeLiCoPtEr Gear
-item.milledMonazite.name=Milled Monazite
+item.itemCellHeLiCoPtEr.name=HeLiCoPtEr Cell
 item.itemIngotPraseodymium.name=Praseodymium Ingot
 item.itemHotIngotPraseodymium.name=Hot Praseodymium Ingot
 item.itemDustPraseodymium.name=Praseodymium Dust
@@ -3359,3 +3361,6 @@ item.itemRingPraseodymium.name=Praseodymium Ring
 item.itemScrewPraseodymium.name=Praseodymium Screw
 item.itemRotorPraseodymium.name=Praseodymium Rotor
 item.itemGearPraseodymium.name=Praseodymium Gear
+item.itemCellPraseodymium.name=Praseodymium Cell
+item.milledMonazite.name=Milled Monazite
+item.FrothMonaziteflotation.name=Monazite Flotation Froth Cell
