More recipe adjustments. Changed how Fluorite is handled. Change Monazite Froth output to no longer contain Praseodymium. Change Monazite Froth output to have 4x less Europium.

--- a/src/resources/assets/miscutils/lang/en_US.lang
+++ b/src/resources/assets/miscutils/lang/en_US.lang
@@ -1170,14 +1170,14 @@ item.itemRingQuantum.name=Quantum Ring
 item.itemScrewQuantum.name=Quantum Screw
 item.itemRotorQuantum.name=Quantum Rotor
 item.itemGearQuantum.name=Quantum Gear
-item.itemDustFluorite.name=Fluorite Dust
-item.itemDustTinyFluorite.name=Tiny Pile of Fluorite Dust
-item.itemDustSmallFluorite.name=Small Pile of Fluorite Dust
-item.crushedFluorite.name=Crushed Fluorite Ore
-item.crushedCentrifugedFluorite.name=Centrifuged Crushed Fluorite Ore
-item.crushedPurifiedFluorite.name=Purified Crushed Fluorite Ore
-item.dustImpureFluorite.name=Impure Fluorite Dust
-item.dustPureFluorite.name=Purified Fluorite Dust
+item.itemDustFluoriteF.name=Fluorite (F) Dust
+item.itemDustTinyFluoriteF.name=Tiny Pile of Fluorite (F) Dust
+item.itemDustSmallFluoriteF.name=Small Pile of Fluorite (F) Dust
+item.crushedFluoriteF.name=Crushed Fluorite (F) Ore
+item.crushedCentrifugedFluoriteF.name=Centrifuged Crushed Fluorite (F) Ore
+item.crushedPurifiedFluoriteF.name=Purified Crushed Fluorite (F) Ore
+item.dustImpureFluoriteF.name=Impure Fluorite (F) Dust
+item.dustPureFluoriteF.name=Purified Fluorite (F) Dust
 item.itemDustCrocoite.name=Crocoite Dust
 item.itemDustTinyCrocoite.name=Tiny Pile of Crocoite Dust
 item.itemDustSmallCrocoite.name=Small Pile of Crocoite Dust
@@ -1890,7 +1890,7 @@ tile.Block of Quantum.name=Block of Quantum
 tile.Quantum Frame Box.name=Quantum Frame Box
 
 //Ores
-tile.OreFluorite.name=Fluorite Ore
+tile.OreFluoriteF.name=Fluorite (F) Ore
 tile.OreCrocoite.name=Crocoite Ore
 tile.OreGeikielite.name=Geikielite Ore
 tile.OreNichromite.name=Nichromite Ore
