--- a/src/resources/assets/miscutils/lang/en_US.lang
+++ b/src/resources/assets/miscutils/lang/en_US.lang
@@ -3235,6 +3235,7 @@ tile.Botmium Frame Box.name=Botmium Frame Box
 item.itemBasicTurbine.name=Basic Turbine
 item.itemBasicTurbine_0.name=Basic Iron Turbine
 item.itemBasicTurbine_1.name=Basic Bronze Turbine
+item.itemBasicTurbine_2.name=Basic Steel Turbine
 
 interaction.voidexcess.enabled=Void Excess Enabled
 interaction.voidexcess.disabled=Void Excess Disabled
