--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -81,6 +81,10 @@ GT5U.machines.minermulti=Multiblock Miner
 GT5U.machines.voidoveflow.enabled=Overflow voiding enabled
 GT5U.machines.voidoveflow.disabled=Overflow voiding disabled
 GT5U.machines.select_circuit=Select Machine Mode
+GT5U.machines.select_circuit.tooltip=Ghost Circuit Slot
+GT5U.machines.select_circuit.tooltip.1=§7LMB/RMB/scroll to cycle through the list
+GT5U.machines.select_circuit.tooltip.2=§7Shift left click to open GUI
+GT5U.machines.select_circuit.tooltip.3=§7Shift right click to clear
 
 GT5U.gui.select.current=Current:
 
