Change composition of Ancient Granite & Lepersonnite to make obtaining Ytterbium possible. Fix Recipe for Wood's Glass lens.

--- a/src/main/resources/assets/miscutils/lang/en_US.lang
+++ b/src/main/resources/assets/miscutils/lang/en_US.lang
@@ -3365,3 +3365,4 @@ item.itemGearPraseodymium.name=Praseodymium Gear
 item.itemCellPraseodymium.name=Praseodymium Cell
 item.milledMonazite.name=Milled Monazite
 item.FrothMonaziteflotation.name=Monazite Flotation Froth Cell
+item.hydrogenchloridemix.name=Hydrogen Chlorine Mix
