make UCFE support tt hatch and rocket fuel

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -240,7 +240,7 @@ UniversalChemicalFuelEngine.hint.6=1 - Maintenance Hatch
 UniversalChemicalFuelEngine.hint.7=2 - Muffler Hatch
 UniversalChemicalFuelEngine.hint.8=3 - Input Hatch
 UniversalChemicalFuelEngine.hint.9=4 - Dynamo Hatch
-UniversalChemicalFuelEngine.hint.10=Doesn't support TecTech Dynamo Hatch
+UniversalChemicalFuelEngine.hint.10=Support TecTech Dynamo/Laser Hatch
 LargeEssentiaGenerator.hint.0=25x Any Essentia Cell
 LargeEssentiaGenerator.hint.1=4x Amber Bricks
 LargeEssentiaGenerator.hint.2=24x Arcane Stone Bricks
