--- a/src/main/resources/assets/goodgenerator/lang/zh_CN.lang
+++ b/src/main/resources/assets/goodgenerator/lang/zh_CN.lang
@@ -225,7 +225,7 @@ UniversalChemicalFuelEngine.hint.6=1 - 维护仓
 UniversalChemicalFuelEngine.hint.7=2 - 消声仓
 UniversalChemicalFuelEngine.hint.8=3 - 输入仓
 UniversalChemicalFuelEngine.hint.9=4 - 动力仓
-UniversalChemicalFuelEngine.hint.10=不支持TecTech动力仓
+UniversalChemicalFuelEngine.hint.10=支持TecTech动力仓
 LargeEssentiaGenerator.hint.0=25x任意源质扩散单元
 LargeEssentiaGenerator.hint.1=4x琥珀砖块
 LargeEssentiaGenerator.hint.2=24x奥术石砖
