--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -15,6 +15,7 @@ GTPP.multiblock.efficiency=Efficiency
 GTPP.multiblock.problems=Problems
 GTPP.multiblock.mei=Max Energy Income
 GTPP.multiblock.usage=Probably uses
+GTPP.multiblock.generation=Probably generates
 GTPP.multiblock.specialvalue=Special Value
 GTPP.multiblock.duration=Duration
 
