--- a/src/main/resources/assets/gtneioreplugin/lang/en_US.lang
+++ b/src/main/resources/assets/gtneioreplugin/lang/en_US.lang
@@ -37,10 +37,10 @@ gtnop.nei.genPositionInfo=In the center of each chunk
 # world names
 gtnop.world.Overworld=Overworld
 gtnop.world.Nether=Nether
-gtnop.world.TheEnd=TheEnd
-gtnop.world.Twilight=Twilight Forrest
+gtnop.world.TheEnd=The End
+gtnop.world.Twilight=Twilight Forest
 gtnop.world.EndAsteroid=Far End Asteroids
-gtnop.world.Vanilla EndAsteroids=Vanilla EndAsteroids
+gtnop.world.Vanilla EndAsteroids=Vanilla End Asteroids
 gtnop.world.Moon=Moon
 gtnop.world.Mars=Mars
 gtnop.world.Phobos=Phobos
@@ -60,15 +60,15 @@ gtnop.world.Oberon=Oberon
 gtnop.world.Proteus=Proteus
 gtnop.world.Triton=Triton
 gtnop.world.Pluto=Pluto
-gtnop.world.Kuiperbelt=Kuiperbelt
+gtnop.world.Kuiperbelt=Kuiper Belt
 gtnop.world.Haumea=Haumea
-gtnop.world.MakeMake=MakeMake
-gtnop.world.CentauriA=αCentauriBb
-gtnop.world.VegaB=VegaB
-gtnop.world.BarnardC=BarnardC
-gtnop.world.BarnardE=BarnardE
-gtnop.world.BarnardF=BarnardF
-gtnop.world.TcetiE=TcetiE
+gtnop.world.MakeMake=Makemake
+gtnop.world.CentauriA=α Centauri Bb
+gtnop.world.VegaB=Vega B
+gtnop.world.BarnardC=Barnard C
+gtnop.world.BarnardE=Barnard E
+gtnop.world.BarnardF=Barnard F
+gtnop.world.TcetiE=T Ceti E
 gtnop.world.Underdark=Deep Dark
 
 
